sample-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nginx
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-nginx
  template:
    metadata:
      labels:
        app: demo-nginx
    spec:
      containers:
        - name: nginx
          image: registry.access.redhat.com/ubi9/nginx-124:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: web-content
              mountPath: /opt/app-root/src/index.html
              subPath: index.html
      volumes:
        - name: web-content
          configMap:
            name: demo-nginx-html
