sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
  namespace: demo-app
spec:
  selector:
    app: demo-nginx
  ports:
    - name: http
      port: 8080
      targetPort: 8080
