sample-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-nginx
  namespace: demo-app
  annotations:
    cert-manager.io/cluster-issuer: duncan-networks-ca-issuer
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - demo-nginx.apps.sn05.duncan-networks.com
      secretName: demo-nginx-tls
  rules:
    - host: demo-nginx.apps.sn05.duncan-networks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-nginx
                port:
                  number: 8080
